# cc-buddy

./: .gitignore  README-CN.md  README.md  plan.md
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.test.tsx  App.tsx  PetWindow.css  PetWindow.test.tsx  PetWindow.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/resources/videos/: busy-to-busy.webm  busy-to-curious.webm  busy-to-excited.webm  busy-to-focused.webm  busy-to-happy.webm  busy-to-hunting.webm  busy-to-idle.webm  busy-to-thinking.webm  busy-to-worried.webm  curious-to-busy.webm  curious-to-curious.webm  curious-to-excited.webm  curious-to-focused.webm  curious-to-happy.webm  curious-to-hunting.webm  curious-to-idle.webm  curious-to-thinking.webm  curious-to-worried.webm  excited-to-busy.webm  excited-to-curious.webm  excited-to-excited.webm  excited-to-focused.webm  excited-to-happy.webm  excited-to-hunting.webm  excited-to-idle.webm  excited-to-thinking.webm  excited-to-worried.webm  focused-to-busy.webm  focused-to-curious.webm  focused-to-excited.webm  focused-to-focused.webm  focused-to-happy.webm  focused-to-hunting.webm  focused-to-idle.webm  focused-to-thinking.webm  focused-to-worried.webm  happy-to-busy.webm  happy-to-curious.webm  happy-to-excited.webm  happy-to-focused.webm  (+41 more)
app/src-tauri/src/: lib.rs  main.rs
app/src/bridge/: monitor.test.ts  monitor.ts
app/src/domain/: animationMachine.test.ts  animationMachine.ts  behavior.ts  (+11 more)
docs/: architecture-cn.md
scripts/: convert-videos.sh
(+3 files in other folders)
