[package]
name = "cc-buddy"
version = "0.1.0"
description = "Desktop pet monitor for Claude Code sessions"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "cc_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
dirs = "6"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
tempfile = "3"
